traefik/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
   # Name of the deployment
  namespace: nginx-test # Name of the namespace
  labels:
    app: nginx
     # Name of your application
spec:
  selector:
    matchLabels:
      app: nginx
       # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: nginx
         # Name of your application
    spec:
      containers:
      # Containers are the individual pieces of your application that you want
      # to run.
      - name: nginx # Name of the container
        image: nginx:latest # The image you want to run
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        # Ports are the ports that your application uses.
        - containerPort: 80 # The port that your application uses
---
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx-test
spec:
  selector:
    app:  nginx
  type:  ClusterIP
  ports:
  - name:  http
    port:  80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-test
  # annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    # kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
    # ---
spec:
  rules:
  - host: "nginx.local.darkmode.live"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx 
            port:
              number: 80
  # (Optional) TLS settings
  # tls:
  # - hosts:
  #   - your-hostname.com  # Your hostname
  #   secretName: your-secret  # Your TLS Secret
  # ---
